--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1474,7 +1474,7 @@ margin: 0px;
 .rpx-price {color:#980300; font-size: 0.8em; font-weight: 900;}
 .dbc-price {color:#5ac1d4; font-size: 0.8em; font-weight: 900;}
 .thor-price {color:#047ecd; font-size: 0.8em; font-weight: 900;}
-.qlink-price {color:#ae00d6; font-size: 0.8em; font-weight: 900;}
+.qlink-price {color:#7f32bc; font-size: 0.8em; font-weight: 900;}
 .nex-price {color:#003fff; font-size: 0.8em; font-weight: 900;}
 .hp-price {color:#ffa6b6; font-size: 0.8em; font-weight: 900;}
 .btc-price {color:#ffaa00; font-size: 0.8em; font-weight: 900;}
@@ -1700,7 +1700,7 @@ a:focus, a:hover, a:active {
 
 #assetList {
   list-style-type: none;
-    height: 550px;
+    height: 600px;
     width: 100%;
     -webkit-padding-start: 0px;
     overflow-y: auto;
