--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -1064,7 +1064,7 @@ webview {
 .col-5 {
   width: 18%;
   float: left;
-  height: 110px;
+  min-height: 110px;
   color: #9d9d9d;
   margin: 1%;
   padding: 15px 2px;
@@ -1417,7 +1417,7 @@ margin: 0px;
 
 
 .dash-portfolio h3 {
-  font-size: 17px;
+  font-size: 16px;
   margin: 6px 0px;
   font-weight: 200;
   word-wrap: break-word;
