--- a/app/styles/_send.scss
+++ b/app/styles/_send.scss
@@ -865,6 +865,10 @@ webview {
   margin-right: 20px;
 }
 
+.font-12 {
+  font-size: 12px;
+}
+
 .font-16 {
   font-size: 16px;
 }
@@ -1790,4 +1794,9 @@ font-size: 13px;
 
 .red-text {
   color: #ff0000;
+}
+
+.left10 {
+  float: left;
+  margin-left: 10px;
 }
